<resources>
    <string name="app_name">Test task from Arcanit</string>
    <string name="plainText">Plain text</string>
    <string name="user_email"> There should be user_email</string>
    <string name="user_name">There should be username</string>
    <string name="user_phone">There should be user_phone</string>
    <string name="post_info">There should be post info</string>
    <string name="start_button">START</string>
    <string name="upload">Upload users and their posts :)</string>
</resources>